--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     }
   ],
   "license": "MIT",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "require": {
     "php": "^7.2",
-    "edwrodrig/qt_app_builder": "dev-master"
+    "edwrodrig/qt_app_builder": "0.0.2"
   },
   "autoload": {
     "psr-4": {
